[package]
name = "rumqttcbin"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rumqttclib = { path = "../rumqttclib" }
rumqttc = "0.20.0"
uuid = { version = "1.3.0", features = ["v4", "fast-rng"] }
tokio = { version = "1.26.0", features = ["full"] }
